sonar checking，但大都无关痛痒 sonar 也升级到3.2, 主要改变是findbugs升级到2.0了, 规则改动不算大